<package format="2">
    <name>marine_sensor_msgs</name>
    <version>0.0.1</version>
    <description>
    This package defines message types for common marine sensors.
    </description>
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
